# pydantic-ai-graph-demo

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
src/demo/: main_agent.py  main_graph.py
src/demo/character/: __init__.py
src/demo/character/banana/: __init__.py  description.md
src/demo/persona/: __init__.py
src/demo/persona/bee/: __init__.py  description.md
